Allow Category management via API
