# config/routes.rb
@@ -4,7 +4,9 @@ Rails.application.routes.draw do
 
   namespace :api do
     namespace :v1 do
-      resources :verticals
+      resources :verticals do
+        resources :categories
+      end
     end
   end
 end
